[package]
name = "telegrams"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "1.0"
serde = {version = "*", features = ["derive"]}

chrono = "0.4"

diesel = { version = "1", features = ["postgres", "r2d2", "uuidv07", "chrono"]}
uuid = {version = "=0.8.1", features = ["serde", "v4"]}
dotenv = "*"

tonic = "0.7"
prost = "0.10"

[build-dependencies]
tonic-build = "0.7"
