[package]
name = "telegrams"
version = "0.3.0"
edition = "2021"

[dependencies]
stop-names = { version = "0.3", git = "https://github.com/dump-dvb/stop-names" }

serde_json = "1.0"
serde = {version = "*", features = ["derive"]}
chrono = "0.4"

diesel = { version = "1", features = ["postgres", "r2d2", "uuidv07", "chrono"]}
uuid = {version = "=0.8.1", features = ["serde", "v4"]}
dotenv = "*"

tonic = "0.7"
prost = "0.10"

[build-dependencies]
tonic-build = "0.7"
